--- a/wwwroot/SignUpPageStyle.css
+++ b/wwwroot/SignUpPageStyle.css
@@ -21,7 +21,7 @@ body
     width: 300px;
     transform: translate(-50%, -50%);
     font-size: 50pt;
-    font-family: Orbitron Medium, Open Sans, Noto Sans Japanese, Trade Gothic Bold Condensed No20, sans-serif;
+    font-family: 'Orbitron', sans-serif;
     font-weight: 550;
 }
 
@@ -56,13 +56,13 @@ body
 }
 
 .mdl-textfield__label {
-    font-family: Open Sans, Noto Sans Japanese, Montserrat, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: #569981 !important;
 }
 
 #matbtn3 {
     font-size: 25px;
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     border-radius: 8px;
     position: absolute;
     top: 70%;
