--- a/PC/Views/Home/Index.cshtml
+++ b/PC/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div id="ChooseModePage" >
+<body>
+    <div id="ChooseModePage" >
         <h6 id="HelloUsername">Hello, [username] !</h6>
 
         <h6 id="ChooseMode">Choose your mode please:</h6>
@@ -13,7 +14,7 @@
 
         <h6 id="Multiplayer">Multiplayer</h6>
 
-        <div>
+        <div  id="multidiv">
             <img id="AppleMulti" src='Assets/AppleMulti-07.jpg'/>
 
             <img id="AppleReverse" src='Assets/AppleReverse-07.jpg'/>
@@ -28,3 +29,4 @@
         </div>
        
     </div>
+</body>
