--- a/PC/Views/Login/Login.cshtml
+++ b/PC/Views/Login/Login.cshtml
@@ -1,11 +1,8 @@
 @page
 @model PC.Views.Login.Login
 
-@{
-    Layout = null;
-}
-
-<div id="LoginPage" >
+<body>
+    <div id="LoginPage" >
         <h6 id="LoginText">Login</h6>
     
         <div id="LoginTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
@@ -24,7 +21,8 @@
 
         <h6 id="QuestionText">Don't have an account yet?</h6>
 
-        <button id="SignUpBtn" class="mdl-button mdl-js-button" onclick='location.href=@Url.Action("Register","Register")'>
+        <button id="SignUpBtn" class="mdl-button mdl-js-button" onclick='location.href="SignUpPage.html"'>
                 Sign Up
         </button>
     </div>
+</body>
