--- a/PC/Views/Login/Login.cshtml
+++ b/PC/Views/Login/Login.cshtml
@@ -20,9 +20,10 @@
         </button>
 
         <h6 id="QuestionText">Don't have an account yet?</h6>
-
+        <a asp-controller="Register" asp-action="Register">    
         <button id="SignUpBtn" class="mdl-button mdl-js-button" onclick='location.href="SignUpPage.html"'>
-                Sign Up
+            Sign Up
         </button>
+        </a>
     </div>
 </body>
