--- a/PC/Views/Register/Register.cshtml
+++ b/PC/Views/Register/Register.cshtml
@@ -19,7 +19,7 @@
         <label class="mdl-textfield__label" for="sample3">Password</label>
     </div>
 
-    <button id="matbtn3" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" asp-controller="LoginController" asp-action="Login">
+    <button id="matbtn3" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" asp-controller="Login" asp-action="Login">
         SIGN UP
     </button>
 </div>
