--- a/PC/Views/Register/Register.cshtml
+++ b/PC/Views/Register/Register.cshtml
@@ -2,19 +2,19 @@
 
 <div id="SignUpPage">
     <h6 id="SignUpText">Sign Up</h6>
-    <form method="post" asp-controller="Register" asp-action="Register">
+    <form method="post" asp-action="Register">
         <div id="NameTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <input class="mdl-textfield__input" type="text" id="sample3" asp-for="name">
             <label class="mdl-textfield__label" for="sample3">Name</label>
         </div>
 
         <div id="LoginTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="sample3" asp-for="email">
+            <input class="mdl-textfield__input" type="email" id="sample3" asp-for="email">
             <label class="mdl-textfield__label" for="sample3">Email</label>
         </div>
 
         <div id="PasswordTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="sample3" asp-for="password">
+            <input class="mdl-textfield__input" type="password" id="sample3" asp-for="password">
             <label class="mdl-textfield__label" for="sample3">Password</label>
         </div>
 
