--- a/wwwroot/SinglePlayerPageStyle.css
+++ b/wwwroot/SinglePlayerPageStyle.css
@@ -26,6 +26,37 @@ body {
     position: fixed;
 }
 
+.centralmenu
+{
+    padding-top:90px;
+    z-index: 600;
+    background-color: white;
+    margin-top: 80px;
+    width: 100%;
+    height: 60%;
+}
+
+.continueSinglePage
+{
+    text-align: center;
+    color: #569981;
+    font-size: 25pt;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 550;
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+.saveSinglePage
+{
+    text-align: center;
+    color: #569981;
+    font-size: 25pt;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 550;
+    margin: 0;
+}
+
 .headtext
 {
     color: #569981;
