--- a/wwwroot/MultiplayerPageStyle.css
+++ b/wwwroot/MultiplayerPageStyle.css
@@ -77,15 +77,23 @@ body {
 
 .playername
 {
-    position: absolute;
-    left: 50%;
-    top: 10%;
-    transform: translate(-50%,-50%);
+    position: relative;
     color: #569981;
     font-size: 30pt;
     font-family: 'Orbitron', sans-serif;
     font-weight: 550;
     margin: 0;
+}
+
+#namenumber
+{
+    position: relative;
+    color: #569981;
+    font-size: 30pt;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 550;
+    margin: 0;
+    margin-left:10px;
 }
 
 .secondscontainer
@@ -194,6 +202,80 @@ body {
     margin-top: 70px;
 }
 
+.nextplayercontainer
+{
+    position: fixed;
+    padding-top:90px;
+    z-index: 600;
+    background-color: white;
+    margin-top: 72px;
+    width: 100%;
+    height: 60%;
+}
+
+.done
+{
+    text-align: center;
+    color: #569981;
+    font-size: 25pt;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 550;
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+#matbtnnext {
+    font-size: 25px;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 8px;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    width: 300px;
+    height: 70px;
+    transform: translate(-50%, -50%);
+    background-color: #569981;
+    transition: 0.3s;
+    letter-spacing: 2px;
+    margin-top: 70px;
+}
+
+.resultall
+{
+    position: fixed;
+    padding-top:90px;
+    z-index: 800;
+    background-color: white;
+    margin-top: 72px;
+    width: 100%;
+    height: 60%;
+}
+
+.res
+{
+    text-align: center;
+    color: #569981;
+    font-size: 25pt;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 550;
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+
+table
+{
+    width: 100%;
+    margin: 0;
+    border-spacing: 10px;
+}
+
+td
+{
+    text-align: center;
+    font-family:'Montserrat', sans-serif;
+}
+
 @media (min-width:375px) and (max-width:562px)
 {
     .headtext
@@ -201,6 +283,10 @@ body {
         font-size: 20pt;
     }
     .playername
+    {
+        font-size: 20pt;
+    }
+    #namenumber
     {
         font-size: 20pt;
     }
@@ -213,6 +299,10 @@ body {
         font-size: 14pt;
     }
     .playername
+    {
+        font-size: 14pt;
+    }
+    #namenumber
     {
         font-size: 14pt;
     }
