--- a/wwwroot/MultiplayerPageStyle.css
+++ b/wwwroot/MultiplayerPageStyle.css
@@ -240,6 +240,22 @@ body {
     margin-top: 70px;
 }
 
+#matbtnback {
+    font-size: 25px;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 8px;
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    width: 200px;
+    height: 70px;
+    transform: translate(-50%, -50%);
+    background-color: #569981;
+    transition: 0.3s;
+    letter-spacing: 2px;
+    margin-top: 70px;
+}
+
 .resultall
 {
     position: fixed;
