Move Jenia new pages to application

--- a/PC/Views/Home/Index.cshtml
+++ b/PC/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         <h6 id="Multiplayer">Multiplayer</h6>
         
         <!-- TODO: Сделать что бы весь див в котором кнопки был кликабельным-->
-        <a asp-controller="MultiPlayer" asp-action="MultiPlayer">
+        <a asp-controller="MultiPlayer" asp-action="ChoosePlayers">
         <div  id="multidiv">
             <img id="AppleMulti" src='Assets/AppleMulti-07.jpg'/>
 
