--- a/PC/Views/Shared/_Layout.cshtml
+++ b/PC/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="~/css/node_modules/getmdl-select/getmdl-select.min.css">
     <script defer src="~/css/node_modules/getmdl-select/getmdl-select.min.js"></script>
+    <script src="~/js/SinglePlayer.js"></script>
+
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="~/css/mdl_style.css">
