--- a/PC/Views/Register/Register.cshtml
+++ b/PC/Views/Register/Register.cshtml
@@ -8,17 +8,17 @@
             <label class="mdl-textfield__label" for="sample3">Name</label>
         </div>
 
-        <div id="LoginTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <div id="LoginSignUpTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <input class="mdl-textfield__input" type="email" id="sample3" asp-for="email">
             <label class="mdl-textfield__label" for="sample3">Email</label>
         </div>
 
-        <div id="PasswordTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <div id="PasswordSignUpTextBox" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <input class="mdl-textfield__input" type="password" id="sample3" asp-for="password">
             <label class="mdl-textfield__label" for="sample3">Password</label>
         </div>
 
-        <button id="matbtn3" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" type ="submit">
+        <button id="matbtn4" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" type ="submit">
             SIGN UP
         </button>
     </form>
