--- a/PC/Views/SinglePlayer/SinglePlayer.cshtml
+++ b/PC/Views/SinglePlayer/SinglePlayer.cshtml
@@ -14,6 +14,13 @@
             </div>
         </header>
 
+        <div class="centralmenu" id="centralmenu" style="display: none;">
+          <h1 class="continueSinglePage" onclick="closeNav()">Continue</h1>
+          <a style="color:unset !important; text-decoration:none !important" asp-controller="Home" asp-action="Index">
+          <h1 class="saveSinglePage">Save & Exit</h1>
+          </a>
+        </div>
+
         <div class="scorecontainer">
             <h1 class="score" id="scoreCounter">@Model.Score</h1>
         </div>
