--- a/PC/wwwroot/css/ChoosePlayersSizePageStyle.css
+++ b/PC/wwwroot/css/ChoosePlayersSizePageStyle.css
@@ -82,7 +82,8 @@ body {
 {
     display: flex;
     flex-direction: row;
-    margin-top:50%;
+    top:20%;
+    position: relative;
 }
 
 .twoplayers
